make-a-wish-salesforce/src/objects/External_ID__c.object
<CustomObject>
    <description>This object will contain External ID references to other systems that hold corresponding / matching records.  This object will allow these ids to persist on surviving records of a record merging process.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the External IDs related account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>External IDs</relationshipLabel>
        <relationshipName>External_IDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the External ID's Related Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>External IDs</relationshipLabel>
        <relationshipName>External_IDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Captures the External ID used by matching records in an external system.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Source__c</fullName>
        <description>Captures the source system type for the related External ID</description>
        <label>External Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>External ID</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E.ID-{00000}</displayFormat>
        <label>External ID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>